<resources>
    <string name="app_name">ArClassroom</string>
    <string name="welcoming_message">Welcome to</string>
    <string name="intro_app_name">Ar Classroom</string>
    <string name="intro_button"> &lt;&lt;&lt; LET\'S START >>> </string>
    <string name="course_selection">Please select a course</string>
    <string name="course1_button">Mathematics</string>
    <string name="course2_button">Physics</string>
    <string name="course3_button">Chemistry</string>
    <string name="course4_button">Biology</string>
    <string name="game_view_content_description">Game view</string>
</resources>